# XKCD-password-generator

./: .gitignore  .travis.yml  2of12.txt  3esl.txt  CONTRIBUTORS  LICENSE-umich-spanishwords-00readme.txt  LICENSE.BSD  MANIFEST.in  README.mkd  README.rst  example_import.py  password_valid  pyproject.toml  setup.py  tox.ini  xkcd-password.py  xkcd_password.py  xkcdpass.1
contrib/: office-safe.txt  xkcdpass.bash-completion
examples/: example_import.py  example_json.py  example_postprocess.py
tests/: test_list.txt  test_xkcdpass.py  xkcdp_tests.py
xkcdpass/: __main__.py  dictGenerator-zhCN.ipynb  example_import.py  xkcd_password.py
xkcdpass/static/: 3esl.txt  Portuguese (European).dic  cz_diceware_wordlist.txt  default.txt  eff_large_de_sample.wordlist  fin-kotus  fr-corrected.txt  fr-freelang-bernard-vivier  fr-freelang-bernard-vivier.txt  ger-anlx  ger-long  ger-short  ita-wiki  legacy  nor-nb  pl-kazojc  pt-pt-ipublicis  pt-pt-l33t-ipublicis  spa-mich  swe-short  wiktionary  zh-cn
