[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xkcdpass"
version = "1.19.9"
description = "Generate secure multiword passwords/passphrases, inspired by XKCD"
readme = "README.rst"
license-files = { paths = ["LICENSE.BSD"] }
authors = [
    { name = "Steven Tobin", email = "steventtobin@gmail.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[project.scripts]
xkcdpass = "xkcdpass.xkcd_password:main"

[project.urls]
Homepage = "https://github.com/redacted/XKCD-password-generator"

[tool.hatch.build.targets.sdist]
include = [
    "/xkcdpass",
]

exclude = [
    "/tests",
    "/examples",
]

[tool.hatch.build.targets.wheel]
packages = [
    "xkcdpass",
]